--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 html {
     height: 100%;
+    width: 100%;
 }
 
 body {
@@ -10,8 +11,10 @@ body {
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
     background-repeat: no-repeat;
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: visible;
 }
 
 
